--- a/Backend/views/common/footer.ejs
+++ b/Backend/views/common/footer.ejs
@@ -20,14 +20,16 @@
 <!--Bootsrap JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
-<!--Own JavaScript -->
-<script type="text/javascript" src="assets/js/main.js"> </script>
-
 <script type="text/javascript"
         src="http://maps.googleapis.com/maps/api/js?key=AIzaSyA4AbdrQSx_0JkebjqZaaxyj95e2tae-4M">
 </script>
 
-<!--<script> google.maps.event.addDomListener(window, 'load', initialize); </script>-->
+<script src="//static.liqpay.com/libjs/checkout.js"> </script>
+
+<!--Own JavaScript -->
+<script type="text/javascript" src="assets/js/main.js"> </script>
+
+
 
 </body>
 </html>
